# users

./: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini
docker/: .example.env  Dockerfile  gunicorn.py
requirements/: base.txt
scripts/: django.py
src/api/: asgi.py  urls.py  wsgi.py
src/api/settings/: __init__.py
src/api/settings/configs/: aws.py  cors.py  databases.py  general_settings.py  installed_apps.py  internal.py  languages.py  microservices.py  middlewares.py  rest_framework.py  templates.py
src/api/settings/envs/: dev.py  test.py
src/tests/: base.py  conftest.py
src/tests/factories/: user.py
src/tests/internal/: __init__.py  test_create.py  test_delete.py  test_lookup.py
src/tests/users/: __init__.py  test_avatar.py  test_profile.py  test_read.py
src/users/: apps.py  router.py
src/users/managers/: __init__.py  user_profile.py
src/users/migrations/: 0001_initial.py  0002_useravatar.py
src/users/models/: __init__.py  user.py  user_avatar.py  user_profile.py
src/users/serializers/: user.py
src/users/services/: user.py
src/users/signals/: user_profile.py
src/users/tests/models/: test_user.py  test_user_profile.py
src/users/views/: __init__.py  internal.py  user.py
